add debut de volume

--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
+POSTGRES_VOL=pgsql
+POSTGRES_PATH=./requirements/data/
 POSTGRES_DB=postgres
-POSTGRES_PASSWORD=tosba
+POSTGRES_USER=tosba
 POSTGRES_PASSWORD=123
 PGDATA=/var/lib/postgresql/data/pgdata
+
+NESTJS_VOL=nestjs
+NESTJS_PATH=./requirements/back/
+NODE_VOL=node
+NODE_PATH=./requirements/front/
