--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
-version: '3'
+version: '3.9'
 services:
         nginx:
+                container_name: nginx
                 image: nginx:stable
                 env_file: .env
                 restart: always
@@ -10,6 +11,7 @@ services:
                 depends_on: [front]
 
         front:
+                container_name: front
                 image: node
                 env_file: .env
                 restart: always
@@ -17,7 +19,9 @@ services:
                 ports: [3042:3042]
                 volumes: [front:/front]
                 depends_on: [back]
+
         back:
+                container_name: back
                 image: nestjs/cli:286d7b9930ef05f7c32484b48b208233c5f44329
                 env_file: .env
                 restart: always
@@ -25,7 +29,9 @@ services:
                 ports: ["3000:3000"]
                 volumes: [back:/back]
                 depends_on: [db]
+
         db:
+                container_name: db
                 image: postgres:12.13-alpine3.17
                 env_file: .env
                 restart: always
