--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-ft_transcendance
-requirements/data
+build/nginx/certs/
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
