more makefile commands, build separated, fix adminer

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,8 @@ services:
 
 
   adminer:
-    image: mcaubrey/adminer
+    image: adminer
+    # image: mcaubrey/adminer
     depends_on:
       - postgres
 
