--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "9.2.1",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "9.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
