--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "yarn ts-node ./node_modules/typeorm/cli -d ./dist/typeorm/data-source.js",
+    "migration:generate": "yarn build && yarn typeorm migration:generate",
+    "migration:run": "yarn build && yarn typeorm migration:run",
+    "migration:revert": "yarn build && yarn typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
