--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "yarn ts-node ./node_modules/typeorm/cli -d ./dist/typeorm/data-source.js",
     "migration:generate": "yarn build && yarn typeorm migration:generate",
+    "migration:create": "yarn build && yarn ts-node ./node_modules/typeorm/cli migration:create",
     "migration:run": "yarn build && yarn typeorm migration:run",
     "migration:revert": "yarn build && yarn typeorm migration:revert"
   },
