better folder organisation

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -17,5 +17,7 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": ["src"],
+  "exclude": ["_TEMPLATE"],
 }
