--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       DATABASE_DB: ${DB_DB}
 
       JWT_SECRET: ${JWT_SECRET}
+      API_UID: ${API_UID}
+      API_SECRET: ${API_SECRET}
 
     working_dir: /app
 
