--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
+POSTGRES_USER=user
+POSTGRES_PASSWORD=secret
+POSTGRES_DB=test_db
 
 DB_DB=test_db
 DB_USERNAME=user
-DB_PASSWORD=password
+DB_PASSWORD=secret
 
 JWT_SECRET=secret
 
