before merge proto-2fa

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ DB_PASSWORD=password
 
 JWT_SECRET=secret
 
+API_42_LINK=https://api.intra.42.fr/oauth/authorize?...
+API_UID=00742
+API_SECRET=007secret
 API_AUTHORIZE=https://api.intra.42.fr/oauth/authorize
 API_REDIRECT_URL=http://localhost:8080/loginapi
 
