Test, websocket working with nginx

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,8 +38,8 @@ services:
     stdin_open:  true # docker run -i
     tty: true        # docker run -t
 
-    ports:
-      - "3001:3001"
+    # ports:
+    #   - "3001:3001"
 
     volumes:
       - ./chat-client:/app
@@ -56,8 +56,8 @@ services:
     stdin_open:  true # docker run -i
     tty: true        # docker run -t
 
-    ports:
-      - "4000:4000"
+    # ports:
+    #   - "4000:4000"
 
     volumes:
       - ./api:/app
@@ -69,8 +69,8 @@ services:
     stdin_open:  true # docker run -i
     tty: true        # docker run -t
 
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
 
     volumes:
       - ./site:/app
