--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
