--- a/api/package.json
+++ b/api/package.json
@@ -37,8 +37,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "axios": "^1.3.4",
     "@types/qrcode": "^1.5.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -47,8 +47,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
-    "randomstring": "^1.2.3",
     "qrcode": "^1.5.1",
+    "randomstring": "^1.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12"
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "madge": "^6.0.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
