passé tfa_secret en not selectable par les query qui retourne user, comme pour password

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ API_REDIRECT_URL=http://localhost:8080/loginapi
 API_UID=00742
 API_SECRET=007secret
 
-AUTH_APP_NAME=PONG
+GOOGLE_AUTH_APP_NAME=PONG
