--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "9.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/qrcode": "^1.5.0",
