corrections selon les com de la pr. Reste a voir pour les fichiers effaces + pour faire un meilleurs upload des avatars via nginx

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,12 @@
-POSTGRES_USER=user
-POSTGRES_PASSWORD=secret
-POSTGRES_DB=test_db
-
 DB_DB=test_db
 DB_USERNAME=user
-DB_PASSWORD=secret
+DB_PASSWORD=password
+
+API_AUTHORIZE=https://api.intra.42.fr/oauth/authorize
+API_REDIRECT_URL=http://localhost:8080/loginapi
+API_UID=00742
+API_SECRET=007secret
 
 JWT_SECRET=secret
 
-API_42_LINK=https://api.intra.42.fr/oauth/authorize?...
-API_UID=00742
-API_SECRET=007secret
-API_AUTHORIZE=https://api.intra.42.fr/oauth/authorize
-API_REDIRECT_URL=http://localhost:8080/loginapi
-
-API_UID=00742
-API_SECRET=007secret
-
-GOOGLE_AUTH_APP_NAME=PONG
+GOOGLE_AUTH_APP_NAME=Pong
