avatar images stockées sur volume et servies par nginx. migrations pour mettre le avatar_url not null et parametre un avatar_url par default dans tous les cas

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 _build/nginx/certs/*.crt
 _build/nginx/certs/*.key
 
+_datas/avatars/*
+!_datas/avatars/default-avatar.*
+!_datas/avatars/.gitkeep
+
 # misc
 .DS_Store
 .env
