--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
 
     volumes:
       - ./api:/app
+      - ./_datas:/app-datas
 
     networks:
       - netpong
@@ -68,6 +69,7 @@ services:
 
     volumes:
       - ./_build/nginx/certs:/certs
+      - ./_datas:/app-datas
 
     networks:
       - netpong
