--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       API_UID: ${API_UID}
       API_SECRET: ${API_SECRET}
 
-      GOOGLE_AUTH_APP_NAME: ${GOOGLE_AUTH_APP_NAME}
+      AUTH_APP_NAME: ${AUTH_APP_NAME}
 
     working_dir: /app
 
