--- a/site/package.json
+++ b/site/package.json
@@ -27,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier -w '{,!(node_modules)/**/}*.tsx'"
+
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +53,8 @@
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7"
   }
 }
