--- a/site/package.json
+++ b/site/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier -w '{,!(node_modules)/**/}*.tsx'"
+    "prettier": "prettier -w '{,!(node_modules)/**/}*.tsx' '{,!(node_modules)/**/}*.ts'"
 
   },
   "eslintConfig": {
