--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -13,6 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
