--- a/site/package.json
+++ b/site/package.json
@@ -3,16 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/qrcode": "^1.5.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
+    "crypto-browserify": "^3.12.0",
     "jwt-decode": "^3.1.2",
     "randomstring": "^1.2.3",
     "react": "^18.2.0",
@@ -22,7 +16,11 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/core": "^7.0.0-0"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,13 +28,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier -w '{,!(node_modules)/**/}*.tsx' '{,!(node_modules)/**/}*.ts'"
-
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -50,7 +41,16 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "devDependencies2": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/qrcode": "^1.5.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.3",
     "postcss": "^8.4.21",
